owm api error handling

--- a/tests/mountebank/imposters/owm/owm_imposters.ejs
+++ b/tests/mountebank/imposters/owm/owm_imposters.ejs
@@ -23,11 +23,6 @@
               "APPID": "test_api_key"
             }
           }
-        },
-        {
-          "deepEquals": {
-            "body": ""
-          }
         }
       ],
       "responses": [
@@ -37,7 +32,77 @@
             "headers": {
               "Content-Type": "application/json; charset=utf-8"
             },
-            "body": "{\"message\":\"accurate\",\"cod\":\"200\",\"count\":3,\"list\":[{\"id\":3094802,\"name\":\"Krakow\",\"coord\":{\"lat\":50.0833,\"lon\":19.9167},\"main\":{\"temp\":287.15,\"pressure\":1023,\"humidity\":93,\"temp_min\":287.15,\"temp_max\":287.15},\"dt\":1536703200,\"wind\":{\"speed\":0.5,\"deg\":290},\"sys\":{\"country\":\"\"},\"rain\":null,\"snow\":null,\"clouds\":{\"all\":0},\"weather\":[{\"id\":800,\"main\":\"Clear\",\"description\":\"Sky is Clear\",\"icon\":\"01n\"}]},{\"id\":3085041,\"name\":\"Śródmieście\",\"coord\":{\"lat\":50.0618,\"lon\":19.9396},\"main\":{\"temp\":287.15,\"pressure\":1023,\"humidity\":93,\"temp_min\":287.15,\"temp_max\":287.15},\"dt\":1536703200,\"wind\":{\"speed\":0.5,\"deg\":290},\"sys\":{\"country\":\"\"},\"rain\":null,\"snow\":null,\"clouds\":{\"all\":0},\"weather\":[{\"id\":800,\"main\":\"Clear\",\"description\":\"Sky is Clear\",\"icon\":\"01n\"}]},{\"id\":7530768,\"name\":\"Powiat krakowski\",\"coord\":{\"lat\":50.0999,\"lon\":19.9371},\"main\":{\"temp\":287.15,\"pressure\":1023,\"humidity\":93,\"temp_min\":287.15,\"temp_max\":287.15},\"dt\":1536703200,\"wind\":{\"speed\":0.5,\"deg\":290},\"sys\":{\"country\":\"\"},\"rain\":null,\"snow\":null,\"clouds\":{\"all\":0},\"weather\":[{\"id\":800,\"main\":\"Clear\",\"description\":\"Sky is Clear\",\"icon\":\"01n\"}]}]}"
+            "body": <% include responses/owm_find_cities.json %>
+          }
+        }
+      ]
+    },
+    {
+      "predicates": [
+        {
+          "deepEquals": {
+            "method": "GET"
+          }
+        },
+        {
+          "deepEquals": {
+            "path": "/data/2.5/find"
+          }
+        },
+        {
+          "deepEquals": {
+            "query": {
+              "lat": "50.082961",
+              "lon": "19.9373487",
+              "cnt": "3",
+              "APPID": "invalid_test_api_key"
+            }
+          }
+        }
+      ],
+      "responses": [
+        {
+          "is": {
+            "statusCode": 401,
+            "headers": {
+              "Content-Type": "application/json; charset=utf-8"
+            },
+            "body": <% include responses/invalid_api_key.json %>
+          }
+        }
+      ]
+    },
+    {
+      "predicates": [
+        {
+          "deepEquals": {
+            "method": "GET"
+          }
+        },
+        {
+          "deepEquals": {
+            "path": "/data/2.5/finx"
+          }
+        },
+        {
+          "deepEquals": {
+            "query": {
+              "lat": "50.082961",
+              "lon": "19.9373487",
+              "cnt": "3",
+              "APPID": "test_api_key"
+            }
+          }
+        }
+      ],
+      "responses": [
+        {
+          "is": {
+            "statusCode": 404,
+            "headers": {
+              "Content-Type": "application/json; charset=utf-8"
+            },
+            "body": <% include responses/invalid_endpoint.json %>
           }
         }
       ]
