behat update, current weather endpoint

--- a/tests/mountebank/imposters/owm/owm_imposters.ejs
+++ b/tests/mountebank/imposters/owm/owm_imposters.ejs
@@ -18,7 +18,7 @@
           "deepEquals": {
             "query": {
               "lat": "50.082961",
-              "lon": "19.9373487",
+              "lon": "19.937348",
               "cnt": "3",
               "APPID": "test_api_key"
             }
@@ -53,7 +53,7 @@
           "deepEquals": {
             "query": {
               "lat": "50.082961",
-              "lon": "19.9373487",
+              "lon": "19.937348",
               "cnt": "3",
               "APPID": "invalid_test_api_key"
             }
@@ -88,7 +88,7 @@
           "deepEquals": {
             "query": {
               "lat": "50.082961",
-              "lon": "19.9373487",
+              "lon": "19.937348",
               "cnt": "3",
               "APPID": "test_api_key"
             }
